<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDED"
    tools:context=".Help">
    <FrameLayout
        android:id="@+id/linearLayoutHelp"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/Blue"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/btnHelpBack"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_gravity="start|center_vertical"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_arrow_back"
            android:drawablePadding="1dp"
            android:paddingStart="1dp"
            android:text="Back"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.44" />

        <TextView
            android:id="@+id/textViewHelpHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnHelpBack"
            android:layout_gravity="start|center_vertical|center_horizontal"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:text="Contact Us"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="26dp"
            android:clickable="false"/>

    </FrameLayout>

    <EditText
        android:id="@+id/edtHelpName"
        android:layout_width="310dp"
        android:layout_height="41dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Name"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColorHint="#5A5A5A"
        android:textSize="16sp"
        android:fontFamily="@font/roboto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

    <EditText
        android:id="@+id/edtHelpEmail"
        android:layout_width="310dp"
        android:layout_height="41dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColorHint="#5A5A5A"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346" />

    <EditText
        android:id="@+id/edtHelpComment"
        android:layout_width="310dp"
        android:layout_height="150dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:gravity="start|top"
        android:hint="Comment/Issue"
        android:textColorHint="#5A5A5A"
        android:inputType="textMultiLine"
        android:paddingLeft="16dp"
        android:paddingTop="5dp"
        android:paddingRight="16dp"
        android:paddingBottom="5dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.616" />

    <Button
        android:id="@+id/btnHelpSubmit"
        android:layout_width="223dp"
        android:layout_height="29dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/roboto"
        android:text="Submit"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787" />


</androidx.constraintlayout.widget.ConstraintLayout>